Remove wave svg, fix overflow bug

--- a/src/utils/css/components/hero.scss
+++ b/src/utils/css/components/hero.scss
@@ -84,4 +84,10 @@
     border-radius: 3px;
     z-index: 1;
   }
+
+  @media (min-width: $bp-tablet) {
+    position: fixed;
+    top: 1vh;
+    left: 1vh;
+  }
 }
